deployments/middleware/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middleware-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: middleware
  template:
    metadata:
      labels:
        component: middleware
    spec:
      containers:
        - name: middleware
          image: choem/graphql-test-middleware
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
