deployments/middleware/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: middleware-service
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
  selector:
    component: middleware
