deployments/middleware/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: middleware-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /middleware/(.*)
            backend:
              serviceName: middleware-service
              servicePort: 80
